Fixes for UI breaking on small viewport

--- a/src/components/profile/section.sass
+++ b/src/components/profile/section.sass
@@ -103,6 +103,7 @@
         .bigrow
             display: flex
             align-items: flex-start
+            min-width: $w * 24.5
             &:first-child
                 padding-bottom: $w
 
