--- a/src/components/sidebar/sidebar.sass
+++ b/src/components/sidebar/sidebar.sass
@@ -10,6 +10,7 @@
     max-width: 300px
     padding-top: 10px
     background: hsl(0deg, 0%, 8%)
+    overflow-y: auto
     a
         display: flex
         align-items: center
@@ -28,6 +29,7 @@
         app-led
             height: 28px
             width: 28px
+            aspect-ratio: 1/1
             margin-right: 8px
         &.active
             background-color: hsl(0deg, 0%, 15%)
